tests/golden/type_errors/anonymous_struct_annotated_initializer.err
Type error at 2:19: undefined variable `name`
  let p: Person = { name: "Ada" };
                    ^
